mesh-conf/vets.yaml
---
kind: Service
apiVersion: mesh.megaease.com/v1alpla1
metadata:
  name: vets-service
spec:
  registerTenant: pet
  sidecar:
    discoveryType: consul
    address: "127.0.0.1"
    ingressPort: 13001
    ingressProtocol: http
    egressPort: 13002
    egressProtocol: http
