mesh-conf/visits.yaml
kind: Service
apiVersion: mesh.megaease.com/v2alpla1
metadata:
  name: visits-service
spec:
  registerTenant: pet
  sidecar:
    discoveryType: eureka
    address: "127.0.0.1"
    ingressPort: 13001
    ingressProtocol: http
    egressPort: 13002
    egressProtocol: http
