mesh-conf/ingress.yaml
kind: Ingress
apiVersion: mesh.megaease.com/v1alpla1
metadata:
  name: pet-ingress
spec:
  rules:
  - paths:
    - path: /
      backend: api-gateway
